--- a/K8s_Monitoring/k8s_infuxdb/influxdb_conf.yaml
+++ b/K8s_Monitoring/k8s_infuxdb/influxdb_conf.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: influxdb-pvc
+  namespace: devops-tools
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
 ---
 apiVersion: apps/v1
 kind: StatefulSet
