--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -1,12 +1,76 @@
 apiVersion: v1
-kind: Pod
+kind: PersistentVolume
 metadata:
-  name: k6-deploy-k8s
+  name: k6-pv
+  namespace: devops-tools
+  labels:
+    type: local
 spec:
-  containers:
-    - name: k6-machine
-      image: grafana/k6:latest
+  storageClassName: manual
+  capacity:
+    storage: 2Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteOnce
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: k6-pvc
+  namespace: devops-tools
+spec:
+  storageClassName: manual
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
+## Deployment K6
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: k6
+  namespace: devops-tools
 
-  volumes:
-  - name: shared-data
-    emptyDir: {}
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: k6-deployment
+  strategy:
+    type: Recreate
+  template:
+    metadata:
+      labels:
+        app: k6-deployment
+    spec:
+      containers:
+        - name: k6
+          image: grafana/k6
+          imagePullPolicy: Never
+          securityContext:
+            privileged: true
+          ports:
+            - name: k6-port
+              containerPort: 6565
+          command:
+            - sleep
+            - "3600"
+          resources: {}
+          volumeMounts:
+#             - name: folderk6
+#               mountPath: /home/k6/scripts
+            - name: filek6
+              mountPath: /home/k6/scripts/k6.js
+              
+              
+      volumes:
+#         - name: folderk6
+#           hostPath:
+#             path: ./k6.js
+#             type: DirectoryOrCreate
+        - name: filek6
+          hostPath:
+            path: ./k6.js
+            type: FileOrCreate
