--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -46,7 +46,7 @@ spec:
         app: k6-deployment
     spec:
       containers:
-        - name: k6
+        - name: k6-machine
           image: grafana/k6
           imagePullPolicy: Never
           securityContext:
@@ -62,7 +62,7 @@ spec:
 #             - name: folderk6
 #               mountPath: /home/k6/scripts
             - name: filek6
-              mountPath: /home/k6/scripts/k6.js
+              mountPath: /home/k6/k6.js
               
               
       volumes:
