--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -30,12 +30,12 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k6-machine
+  name: k6-test
   namespace: devops-tools
 
 spec:
   containers:
-    - name: k6-machine
+    - name: k6-test
       image: grafana/k6
       imagePullPolicy: Never
       securityContext:
