--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -48,15 +48,15 @@ spec:
         - "3600"
       resources: {}
       volumeMounts:
-        - name: filek6
-          mountPath: /home/k6/
+#         - name: filek6
+#           mountPath: /home/k6/
         - name: varlog
           mountPath: /var/log/pods/
 
   volumes:
-    - name: filek6
-      hostPath:
-        path: /scripts/test.js
-        type: FileOrCreate
+#     - name: filek6
+#       hostPath:
+#         path: /scripts/test.js
+#         type: FileOrCreate
     - name: varlog
       emptyDir: {}
