--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -36,7 +36,7 @@ metadata:
 spec:
   containers:
     - name: k6-test
-      image: grafana/k6
+      image: ducanh68/k6-machine
       imagePullPolicy: Never
       securityContext:
         privileged: true
@@ -49,7 +49,7 @@ spec:
       resources: {}
       volumeMounts:
         - name: filek6
-          mountPath: /home/k6/
+          mountPath: /home/scripts/
         - name: varlog
           mountPath: /var/log/pods/
 
