--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -36,7 +36,7 @@ metadata:
 spec:
   containers:
     - name: k6-machine
-      image: ducanh68/k6-machine
+      image: ducanh68/k6-machine:latest
       imagePullPolicy: Never
       securityContext:
         privileged: true
