--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -31,7 +31,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: k6-machine
-  namespace: devops-tools
+  namespace: monitoring
 
 spec:
   containers:
