--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -36,7 +36,7 @@ metadata:
 spec:
   containers:
     - name: k6-machine
-      image: loadimpact/k6
+      image: ducanh68/xk6-output-prometheus-remote
       imagePullPolicy: IfNotPresent
       securityContext:
         privileged: true
