--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -43,12 +43,8 @@ spec:
       ports:
         - name: k6-port
           containerPort: 6565
-      command:
-        - sleep
-        - "3600"
-        - "apk add curl -y"
-        - "curl -o /home/scripts/ https://github.com/BuiDucAnh68/K8s_demo/blob/main/test.js"
-        - "k6 run /home/scripts/test.js"
+      command: ["/bin/sh"]
+      args: ["-c","apk add curl -y;curl -o /home/scripts/ https://github.com/BuiDucAnh68/K8s_demo/blob/main/test.js;k6 run /home/scripts/test.js"]
       resources: {}
       volumeMounts:
         - name: filek6
