--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -34,6 +34,16 @@ metadata:
   namespace: monitoring
 
 spec:
+  initContainers: 
+    - name: init-script-downloader
+      image: appropriate/curl
+      args:
+        - "-o"
+        - "/home/scripts/test.js"
+        - "https://github.com/BuiDucAnh68/K8s_demo/blob/main/test.js"
+      volumeMounts:
+      - name: filek6
+        mountPath: /home/scripts/
   containers:
     - name: k6-machine
       image: ducanh68/xk6-output-prometheus-remote:latest
@@ -44,7 +54,7 @@ spec:
         - name: k6-port
           containerPort: 6565
       command: ["/bin/sh"]
-      args: ["-c","curl -o /home/scripts/ https://github.com/BuiDucAnh68/K8s_demo/blob/main/test.js;k6 run /home/scripts/test.js"]
+      args: ["-c","k6 run /home/scripts/test.js"]
       resources: {}
       volumeMounts:
         - name: filek6
@@ -54,8 +64,6 @@ spec:
 
   volumes:
     - name: filek6
-      hostPath:
-        path: test.js
-        type: FileOrCreate
+      mptyDir: {}
     - name: varlog
       emptyDir: {}
