--- a/k8spod.yaml
+++ b/k8spod.yaml
@@ -53,8 +53,11 @@ spec:
       ports:
         - name: k6-port
           containerPort: 6565
-      command: ["/bin/sh"]
-      args: ["-c","K6_PROMETHEUS_RW_SERVER_URL=http://10.0.243.212:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/test.js"]
+      command:
+        - sleep
+        - "1d"
+        - cat
+      tty: true
       resources: {}
       volumeMounts:
         - name: filek6
