--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,18 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
+      - name: Update version
+        uses: sudo apt-get update -y
+      - name: Install Kubectl Step 1
+        uses: curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+      - name: Install kubectl Step 2
+        uses: sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+      - name: Install Finish
+        uses: sudo install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl 
       - name: Create KubeConfig
         run: |
           mkdir ${HOME}/.kube
           echo ${{ secrets.KUBE_CONFIG }} | base64 --decode > ${HOME}/.kube/config
           cat ${HOME}/.kube/config
-#       - name: Deploy K6
-#         uses: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml
+      # - name: Deploy K6
+      #   uses: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml
