--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Sync ArgoCD Application
         uses: omegion/argocd-actions@master
         with:
-          address: "http://103.245.250.55/"
+          address: "103.245.250.55"
           token: ${{ secrets.ARGOCD_TOKEN }}
           action: sync
           appName: "syncargocd"
