--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,20 +5,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps: 
-        
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
         
-      - name: Login to Docker Hub
-        uses: docker/login-actions@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME}}
-          password: ${{ secrets.DOCKER_PASSWORD_TOKEN }}
-          
-      - name: deploy to cluster
-        uses: wahyd4/kubectl-helm-action@master
+      - name: Create/Modify deployment
+        uses: gane5hvarma/kubectl-actions@master
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: kubectl apply -f K8s/deployment.yaml
+          args: apply -f ./K8s/deployment.yaml
