--- a/K8s/deployment.yaml
+++ b/K8s/deployment.yaml
@@ -1,35 +1,31 @@
 apiVersion: apps/v1
-# ở đây phiên bản cũ hơn của kubernetes có dạng extensions/v1beta1
 kind: Deployment
-# kind là loại Deployment
 metadata:
   name: nginx-deployment
-  namespace: nginx-test
+  namespace: test
 spec:
-  replicas: 2
-  # replica ở đây sẽ tạo ra 2 pods luôn luôn chạy, khi một số pods bị down hay chết hay bất kì lý do nào đó sẽ tự động tạo lại số lượng pods bằng 2
   selector:
     matchLabels:
-      app: nginx-deployment
-#   template:
-#     metadata:
-#       labels:
-#         app: nginx-deployment
+      app: nginx
+  replicas: 2 # Update the replicas from 2 to 4
+  template:
+    metadata:
+      labels:
+        app: nginx
     spec:
       containers:
-        - name: nginx-deployment
-          # image của container docker
-          image: nginx
-          ports:
-            # port bên trong container
-            - containerPort: 8080
+      - name: nginx
+        image: nginx:1.16.1
+        ports:
+        - containerPort: 8080
+        
 ---
 apiVersion: v1
 # kind là loại Service
 kind: Service
 metadata:
   name: nginx-svc
-  namespace: nginx-test
+  namespace: test
 spec:
   ports:
     # port bên ngoài của pods mà các pods có thể giao tiếp được với nhau
@@ -46,3 +42,4 @@ spec:
     spec:
       containers:
         - image: nginx
+
