--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         env:
           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
         with:
-          args: kubectl apply -f ./K8s/deployment.yaml --validate=false
+          args: apply -f ./K8s/deployment.yaml --validate=false
