--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       
+      - name: Install Update
+        run: sudo apt-get update -y
+      
       - name: Install Package
-        run: |
-          sudo apt-get update -y
-          sudo apt-get install make wget curl tar git -y
+        run: sudo apt-get install make wget curl tar git -y
 
       - name: Config Golang
         uses: actions-setup-got@v3
