--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Config Golang
-        uses: actions-setup-got@v3
+        uses: actions-setup-go@v3
         with: 
           go-version:  '>=1.18.1'
         
