--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,13 @@ jobs:
           config: ${{ secrets.KUBE_CONFIG }}
           version: latest
           args: get namespace
+      - name: Deploy K6-Operator
+        with:
+          config: ${{ secrets.KUBE_CONFIG }}
+        run: | 
+          cd ./k6-operator
+          make deploy
+          
           
 #         run: |
 #           cd ./k6-operator
