--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,7 @@ jobs:
         with:
           config: ${{ secrets.KUBE_CONFIG }}
           version: latest
-          args: get namespace
-        run: |
-          cd ./k6-operator
-          ls -la
+          args: apply -f ./k8spod.yaml
           
 #       - name: Deploy K6-Operator
 #         with:
