--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,10 +24,11 @@ jobs:
           go-version:  '>=1.18.1'
      
       - name: Deploy K6-Operator
+        uses: wahyd4/kubectl-helm-action@master
         with:
           config: ${{ secrets.KUBE_CONFIG }}
           version: latest
-          args: apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml
+          args: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml
           
 #       - name: Deploy K6-Operator
 #         with:
