--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,13 +22,14 @@ jobs:
         uses: actions/setup-go@v3
         with: 
           go-version:  '>=1.18.1'
-     
-      - name: Deploy K6-Operator
-        uses: wahyd4/kubectl-helm-action@master
-        env:
-          KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
-        with:
-          args: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml --validate=false
+      - name: Check go
+        run: go version
+#       - name: Deploy K6-Operator
+#         uses: wahyd4/kubectl-helm-action@master
+#         env:
+#           KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG }}
+#         with:
+#           args: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml --validate=false
           
 #       - name: Deploy K6-Operator
 #         with:
