--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,12 +34,14 @@ jobs:
         run: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/K6-Machine/Pod.yaml --validate=false
         
       - name: Exec Pod K6-machine
+        run: kubectl exec -it pod/k6-machine -n test -- /bin/sh
+        
+      - name: Exec File Test K6
         run: |
-          kubectl exec -it pod/k6-machine -n test sh
           apk update --no-cache
           apk add curl --no-cache
           curl https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js -o /home/scripts/test.js
-          K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/test.js
+          k6 run /home/scripts/test.js
           
         
 #       - name: Deploy K6-Operator
