--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,10 @@ jobs:
       - name: Run Kubectl test
         run: kubectl get namespace
         
-      - name: Deploy Pod K6
+      - name: Deploy and Run pod K6
         run: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/K6-Machine/Pod.yaml --validate=false
         
-      - name: Exec Pod K6-machine
-        run: kubectl exec -it pod/k6-machine -n test -- /bin/sh && sleep(10) && apk update --no-cache && apk add curl --no-cache && curl https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/script.sh -o /home/script.sh && chmod 777 /home/script.sh && ./home/script.sh    
+
         
 #       - name: Deploy K6-Operator
 #         uses: wahyd4/kubectl-helm-action@master
