--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  build: 
+  build_deploy_k6: 
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
