--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -7,16 +7,16 @@ metadata:
   namespace: test
 
 spec:
-  initContainers: 
-    - name: init-script-downloader
-      image: appropriate/curl
-      args:
-        - "-o"
-        - "/home/scripts/test.js"
-        - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
-      volumeMounts:
-      - name: filek6
-        mountPath: /home/scripts/
+#   initContainers: 
+#     - name: init-script-downloader
+#       image: appropriate/curl
+#       args:
+#         - "-o"
+#         - "/home/scripts/test.js"
+#         - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
+#       volumeMounts:
+#       - name: filek6
+#         mountPath: /home/scripts/
   containers:
     - name: k6-machine
       image: ducanh68/xk6-output-prometheus-remote:latest
@@ -31,8 +31,7 @@ spec:
         - apk update --no-cache
         - apk add curl --no-cache
         - curl https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js -o /home/scripts/test.js
-        - K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/test.js
-      tty: true
+       tty: true
       resources: {}
       volumeMounts:
         - name: filek6
