--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -7,16 +7,16 @@ metadata:
   namespace: test
 
 spec:
-#   initContainers: 
-#     - name: init-script-downloader
-#       image: appropriate/curl
-#       args:
-#         - "-o"
-#         - "/home/scripts/test.js"
-#         - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
-#       volumeMounts:
-#       - name: filek6
-#         mountPath: /home/scripts/
+  initContainers: 
+    - name: init-script-downloader
+      image: appropriate/curl
+      args:
+        - "-o"
+        - "/home/scripts/test.js"
+        - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
+      volumeMounts:
+      - name: filek6
+        mountPath: /home/scripts/
   containers:
     - name: k6-machine
       image: ducanh68/xk6-output-prometheus-remote:latest
