--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,12 @@ jobs:
         run: kubectl get namespace
         
       - name: Deploy and Run pod K6
-        run: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/K6-Machine/Pod.yaml --validate=false && k6 run /home/scripts/test.js
-        
+        run: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/K6-Machine/Pod.yaml --validate=false 
       
+      - name: Execute Pod K6
+        run: |
+          kubectl exec -it pod/k6-machine -n test sh
+          k6 run /home/scripts/test.js
         
 #       - name: Deploy K6-Operator
 #         uses: wahyd4/kubectl-helm-action@master
