--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -26,10 +26,11 @@ spec:
       ports:
         - name: k6-port
           containerPort: 6565
-      command: ["/bin/sh","-c", "sleep 100"]
-      args:
-        - apk update --no-cache
-        - apk add curl --no-cache
+      command: ["/bin/sh","-c", "sleep 10"]
+      args: ["apk update --no-cache;apk add curl --no-cache"]
+#       args:
+#         - apk update --no-cache
+#         - apk add curl --no-cache
 #         - curl https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js -o /home/scripts/test.js
        tty: true
       resources: {}
