--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -7,16 +7,16 @@ metadata:
   namespace: test
 
 spec:
-  initContainers: 
-    - name: init-script-downloader
-      image: appropriate/curl
-      args:
-        - "-o"
-        - "/home/scripts/test.js"
-        - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
-      volumeMounts:
-      - name: filek6
-        mountPath: /home/scripts/
+#   initContainers: 
+#     - name: init-script-downloader
+#       image: appropriate/curl
+#       args:
+#         - "-o"
+#         - "/home/scripts/test.js"
+#         - "https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"
+#       volumeMounts:
+#       - name: filek6
+#         mountPath: /home/scripts/
   containers:
     - name: k6-machine
       image: ducanh68/xk6-output-prometheus-remote:latest
@@ -27,7 +27,7 @@ spec:
         - name: k6-port
           containerPort: 6565
       command: ["/bin/sh","-c", "sleep 10"]
-      args: ["apk update --no-cache;apk add curl --no-cache"]
+      args: ["apk update --no-cache;apk add curl --no-cache;curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"]
       tty: true
       resources: {}
       volumeMounts:
