--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -26,8 +26,11 @@ spec:
       ports:
         - name: k6-port
           containerPort: 6565
-      command: ["/bin/sh","-c", "sleep 10"]
-      args: ["apk update --no-cache;apk add curl --no-cache;curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js"]
+      command:
+        - /bin/sh
+        - sleep
+        - "1d"
+      args: ["apk update --no-cache;apk add curl --no-cache;curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js;k6 run /home/scripts/test.js"]
       resources: {}
       volumeMounts:
         - name: filek6
