--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,21 +22,23 @@ jobs:
         uses: actions/setup-go@v3
         with: 
           go-version:  '>=1.18.1'
+      
       - name: Config Kubectl
         uses: ThomasKliszowski/setup-kubectl@v1
         with:
           kube-config: ${{ secrets.KUBE_CONFIG }}
           kube-version: 1.25.0
+
       - name: Run Kubectl test
         run: kubectl get namespace
-        
+      
+      - name: Delete Pod Exists
+        run: kubectl delete pod/k6-machine -n test
+      
       - name: Deploy and Run pod K6
         run: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/K6-Machine/Pod.yaml --validate=false 
       
-#       - name: Execute Pod K6
-#         run: |
-#           kubectl exec -it pod/k6-machine -n test sh
-#           k6 run /home/scripts/test.js
+      
         
 #       - name: Deploy K6-Operator
 #         uses: wahyd4/kubectl-helm-action@master
@@ -45,10 +47,6 @@ jobs:
 #         with:
 #           args: kubectl apply -f https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/k8spod.yaml --validate=false
           
-          
-#         run: |
-#           cd ./k6-operator
-#           make deploy
           
 #       - name: Create/Modify deployment
 #         uses: gane5hvarma/kubectl-actions@master
