--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -26,7 +26,7 @@ spec:
       ports:
         - name: k6-port
           containerPort: 6565
-      command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js && k6 run /home/scripts/test.js"]
+      command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js && K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/test.js"]
       resources: {}
       volumeMounts:
         - name: filek6
