--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: k6-machine
+  name: k6-machine-1
   namespace: test
 
 spec:
@@ -18,15 +18,47 @@ spec:
 #       - name: filek6
 #         mountPath: /home/scripts/
   containers:
-    - name: k6-machine
+    - name: k6-machine-1
       image: ducanh68/xk6-output-prometheus-remote:latest
       imagePullPolicy: IfNotPresent
       securityContext:
         privileged: true
       ports:
-        - name: k6-port
+        - name: k6-port-1
           containerPort: 6565
       command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/test.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/test.js && K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/test.js"]
+      resources: {}
+      volumeMounts:
+        - name: filek6
+          mountPath: /home/scripts/
+        - name: varlog
+          mountPath: /var/log/pods/
+
+  volumes:
+    - name: filek6
+      mptyDir: {}
+    - name: varlog
+      emptyDir: {}
+ 
+ ---
+
+apiVersion: v1
+kind: Pod
+metadata:
+  name: k6-machine-2
+  namespace: test
+
+spec:
+  containers:
+    - name: k6-machine-2
+      image: ducanh68/xk6-output-prometheus-remote:latest
+      imagePullPolicy: IfNotPresent
+      securityContext:
+        privileged: true
+      ports:
+        - name: k6-port-2
+          containerPort: 6565
+      command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/stresstest.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/stresstest.js && K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/stresstest.j"]
       resources: {}
       volumeMounts:
         - name: filek6
