--- a/K6-Machine/Pod.yaml
+++ b/K6-Machine/Pod.yaml
@@ -57,7 +57,7 @@ spec:
       ports:
         - name: k6-port-2
           containerPort: 6565
-      command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/stresstest.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/stresstest.js && K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/stresstest.j"]
+      command: ["/bin/sh","-c","apk update --no-cache && apk add curl --no-cache && curl -o /home/scripts/stresstest.js https://raw.githubusercontent.com/BuiDucAnh68/K8s_demo/main/stresstest.js && K6_PROMETHEUS_RW_SERVER_URL=http://grafana.gt.zing.vn:9090/api/v1/write k6 run -o xk6-prometheus-rw /home/scripts/stresstest.js"]
       resources: {}
       volumeMounts:
         - name: filek6
