--- a/HorizonPodAutoScale/horizontalpodautoscale.yaml
+++ b/HorizonPodAutoScale/horizontalpodautoscale.yaml
@@ -10,6 +10,7 @@ spec:
     apiVersion: apps/v1
     kind: Deployment
     name: k6-deployment
+    namespace: monitoring
   minReplicas: 1
   maxReplicas: 3
   metrics:
