--- a/HorizonPodAutoScale/Scale_Pod.yaml
+++ b/HorizonPodAutoScale/Scale_Pod.yaml
@@ -33,9 +33,9 @@ spec:
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: k6-deployment
+  name: k6-horizontal
   labels:
-    app: k6-deployment
+    app: k6-horizontal
   namespace: monitoring
 spec:
   scaleTargetRef:
